Solved wrapping issue: changed to display flex

--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,7 @@ body {
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
 }
+
+.category-section {
+    display: flex;
+}
